# LI_I

./: 2022li1g079.cabal  README.md
doc/: Main.html  Tarefa1_2022li1g079.html  Tarefa2_2022li1g079.html  Tarefa3_2022li1g079.html  Tarefa4_2022li1g079.html  Tarefa5_2022li1g079.html  doc-index.html  index.html
doc/html/: Main.html  Tarefa1_2022li1g079.html  Tarefa2_2022li1g079.html  Tarefa3_2022li1g079.html  Tarefa4_2022li1g079.html  doc-index.html  index.html
src/: Main.hs  Tarefa1_2022li1g079.hs  Tarefa2_2022li1g079.hs  Tarefa3_2022li1g079.hs  Tarefa4_2022li1g079.hs  Tarefa5_2022li1g079.hs  Tarefa6_2022lig079.hs
src/doc/html/: Tarefa3_2022li1g079.html  doc-index.html  index.html
tests/: Fase1.hs  Spec.hs  Tarefa1_2022li1g079_Spec.hs  Tarefa2_2022li1g079_Spec.hs  Tarefa3_2022li1g079_Spec.hs  Tarefa4_2022li1g079_Spec.hs
